Add style to pages

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -42,3 +42,21 @@ h6 {
   overflow-wrap: break-word;
   hyphens: auto;
 }
+
+h1 {
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 1.4;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.4;
+}
+
+h3 {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.4;
+}
