--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,3 +2,8 @@
 @import "base/base";
 @import "base/typography";
 @import "base/variables";
+
+@import "helpers/row";
+
+@import "pages/login";
+@import "pages/pageNotFound";
