--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -41,12 +41,12 @@
 
   --backdrop-color: rgba(0, 128, 0, 0.1);
 
-  --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.04);
-  --shadow-md: 0px 0.6rem 2.4rem rgba(0, 0, 0, 0.06);
-  --shadow-lg: 0 2.4rem 3.2rem rgba(0, 0, 0, 0.12);
+  --shadow-small: 0 1px 2px rgba(0, 0, 0, 0.04);
+  --shadow-medium: 0px 0.6rem 2.4rem rgba(0, 0, 0, 0.06);
+  --shadow-large: 0 2.4rem 3.2rem rgba(0, 0, 0, 0.12);
 
   --border-radius-tiny: 3px;
-  --border-radius-sm: 5px;
-  --border-radius-md: 7px;
-  --border-radius-lg: 9px;
+  --border-radius-small: 5px;
+  --border-radius-medium: 7px;
+  --border-radius-large: 9px;
 }
