--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -44,6 +44,7 @@
   --shadow-small: 0 1px 2px rgba(0, 0, 0, 0.04);
   --shadow-medium: 0px 0.6rem 2.4rem rgba(0, 0, 0, 0.06);
   --shadow-large: 0 2.4rem 3.2rem rgba(0, 0, 0, 0.12);
+  --shadow-large2: 0 4px 8px rgba(0, 0, 0, 0.1);
 
   --border-radius-tiny: 3px;
   --border-radius-small: 5px;
