--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,10 +3,14 @@
 @import "base/typography";
 @import "base/variables";
 
+@import "features/spaces/SpaceRow";
+@import "features/spaces/SpaceTable";
+
+@import "helpers/margin";
 @import "helpers/row";
 
-@import "pages/login";
-@import "pages/pageNotFound";
+@import "pages/Login";
+@import "pages/PageNotFound";
 
 @import "ui/appLayout";
 @import "ui/logo";
