Add margin helper class style

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import "features/spaces/SpaceRow";
 @import "features/spaces/SpaceTable";
 
+@import "helpers/margin";
 @import "helpers/row";
 
 @import "pages/Login";
@@ -14,3 +15,4 @@
 @import "ui/appLayout";
 @import "ui/logo";
 @import "ui/MainNav";
+@import "ui/Spinner";
