--- a/src/styles/ui/_AppLayout.scss
+++ b/src/styles/ui/_AppLayout.scss
@@ -5,6 +5,11 @@
   height: 100vh;
   position: relative;
 
+  &__container {
+    max-width: 115rem;
+    margin: 0 auto;
+  }
+
   &__main {
     background-color: var(--color-grey-50);
     padding: 4rem 4.8rem 6.4rem;
