style resuable component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "base/typography";
 @import "base/variables";
 
+@import "features/spaces/CreateSpaceForm";
 @import "features/spaces/SpaceRow";
 @import "features/spaces/SpaceTable";
 
@@ -13,6 +14,10 @@
 @import "pages/PageNotFound";
 
 @import "ui/appLayout";
+@import "ui/Button";
+@import "ui/Form";
+@import "ui/Input";
 @import "ui/logo";
 @import "ui/MainNav";
 @import "ui/Spinner";
+@import "ui/Textarea";
