--- a/src/styles/features/spaces/_SpaceRow.scss
+++ b/src/styles/features/spaces/_SpaceRow.scss
@@ -11,7 +11,7 @@
     background-color: var(--color-grey-100);
   }
 
-  &__cabin {
+  &__space {
     font-size: 1.6rem;
     font-weight: 600;
     color: var(--color-theme-700);
