--- a/src/styles/ui/_Form.scss
+++ b/src/styles/ui/_Form.scss
@@ -1,6 +1,6 @@
 .form {
   max-width: 60rem;
-  margin: 0 auto;
+  margin: 3.5rem auto;
   padding: 2.4rem;
   background-color: var(--color-grey-0);
   border: 1px solid var(--color-grey-100);
