add new css variable for shade of red

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -36,6 +36,7 @@
   --color-indigo-700: #2c6e49;
 
   --color-red-100: #fde2e2;
+  --color-red-300: #f5a5a5;
   --color-red-700: #d92027;
   --color-red-800: #a71a1a;
 
