add booking table styles

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -25,20 +25,28 @@
 
   /* Supporting Colors */
   --color-blue-100: #d0f4f6;
+  --color-blue-200: #a7e0e4;
   --color-blue-700: #028090;
+  --color-blue-900: #004c4c;
   --color-green-100: #e9f5e1;
+  --color-green-200: #bde4d3;
   --color-green-700: #197278;
+  --color-green-900: #0b3d3a;
   --color-yellow-100: #fef9c3;
   --color-yellow-700: #a16207;
   --color-silver-100: #e5e7eb;
+  --color-silver-200: #dcdfe2;
   --color-silver-700: #374151;
+  --color-silver-900: #2a2c32;
   --color-indigo-100: #d7f0e5;
   --color-indigo-700: #2c6e49;
 
   --color-red-100: #fde2e2;
+  --color-red-200: #fbc2c2;
   --color-red-300: #f5a5a5;
   --color-red-700: #d92027;
   --color-red-800: #a71a1a;
+  --color-red-900: #7b1d1d;
 
   --backdrop-color: rgba(0, 128, 0, 0.1);
 
