--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,11 +3,14 @@
 @import "base/typography";
 @import "base/variables";
 
+@import "features/bookings/BookingRow";
+@import "features/bookings/BookingTable";
 @import "features/spaces/SpaceRow";
 @import "features/spaces/SpaceTable";
 
 @import "helpers/margin";
 @import "helpers/row";
+@import "helpers/status";
 
 @import "pages/Login";
 @import "pages/PageNotFound";
@@ -18,6 +21,8 @@
 @import "ui/Input";
 @import "ui/logo";
 @import "ui/MainNav";
+@import "ui/Menus";
 @import "ui/Spinner";
 @import "ui/Table";
+@import "ui/Tag";
 @import "ui/Textarea";
