--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,12 +17,15 @@
 
 @import "ui/appLayout";
 @import "ui/Button";
+@import "ui/Filter";
 @import "ui/Form";
 @import "ui/Input";
 @import "ui/logo";
 @import "ui/MainNav";
 @import "ui/Menus";
+@import "ui/Select";
 @import "ui/Spinner";
 @import "ui/Table";
+@import "ui/TableOperations";
 @import "ui/Tag";
 @import "ui/Textarea";
