--- a/src/styles/features/bookings/_BookingRow.scss
+++ b/src/styles/features/bookings/_BookingRow.scss
@@ -1,6 +1,6 @@
 .booking-row {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(6, 1fr) 0.5fr;
   column-gap: 2.4rem;
   align-items: center;
   padding: 1.2rem 2.4rem;
