--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,6 +23,7 @@
 @import "ui/logo";
 @import "ui/MainNav";
 @import "ui/Menus";
+@import "ui/Pagination";
 @import "ui/Select";
 @import "ui/Spinner";
 @import "ui/Table";
