add booking details page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,11 +3,14 @@
 @import "base/typography";
 @import "base/variables";
 
+@import "features/bookings/BookingDataBox";
+@import "features/bookings/BookingDetail";
 @import "features/bookings/BookingRow";
 @import "features/bookings/BookingTable";
 @import "features/spaces/SpaceRow";
 @import "features/spaces/SpaceTable";
 
+@import "helpers/alignment";
 @import "helpers/margin";
 @import "helpers/row";
 @import "helpers/status";
@@ -17,6 +20,8 @@
 
 @import "ui/appLayout";
 @import "ui/Button";
+@import "ui/ButtonGroup";
+@import "ui/ButtonText";
 @import "ui/Filter";
 @import "ui/Form";
 @import "ui/Input";
