Changing status to booked and completed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "features/bookings/BookingDetail";
 @import "features/bookings/BookingRow";
 @import "features/bookings/BookingTable";
+@import "features/create-booking/ConfirmBooking";
 @import "features/spaces/SpaceRow";
 @import "features/spaces/SpaceTable";
 
@@ -22,6 +23,7 @@
 @import "ui/Button";
 @import "ui/ButtonGroup";
 @import "ui/ButtonText";
+@import "ui/Checkbox";
 @import "ui/Filter";
 @import "ui/Form";
 @import "ui/Input";
