build login form and create session for logged in user

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "base/typography";
 @import "base/variables";
 
+@import "features/authentication/LoginForm";
 @import "features/bookings/BookingDataBox";
 @import "features/bookings/BookingDetail";
 @import "features/bookings/BookingRow";
