--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   gap: 2.4rem;
   padding: 2rem;
-  background-color: var(--color-grey-100);
+  background-color: var(--color-theme-200);
   border-radius: 8px;
   box-shadow: var(--shadow-large);
 }
