profile card styling

--- a/src/styles/helpers/_row.scss
+++ b/src/styles/helpers/_row.scss
@@ -3,7 +3,8 @@
   /* Horizontal */
   &--horizontal {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 9rem;
     align-items: center;
   }
   /* Vertical */
