--- a/src/styles/ui/_AppLayout.scss
+++ b/src/styles/ui/_AppLayout.scss
@@ -20,9 +20,9 @@
     position: fixed;
     top: 2rem;
     right: 2rem;
-    background-color: var(--color-grey-0);
+    background-color: var(--color-theme-100);
     padding: 1.6rem 2.4rem;
-    border: 1px solid var(--color-grey-100);
+    border: 1px solid var(--color-theme-500);
     border-radius: var(--border-radius-medium);
     box-shadow: var(--shadow-medium);
     z-index: 1000;
