--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,6 +32,7 @@
 @import "ui/MainNav";
 @import "ui/Menus";
 @import "ui/Pagination";
+@import "ui/ProfilePopup";
 @import "ui/Select";
 @import "ui/Spinner";
 @import "ui/Table";
