complete profile tag

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "base/variables";
 
 @import "features/authentication/LoginForm";
+@import "features/authentication/Signup";
 @import "features/bookings/BookingDataBox";
 @import "features/bookings/BookingDetail";
 @import "features/bookings/BookingRow";
