Error boundary and other bugs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@
 @import "ui/ButtonGroup";
 @import "ui/ButtonText";
 @import "ui/Checkbox";
+@import "ui/Error";
 @import "ui/FileInput";
 @import "ui/Filter";
 @import "ui/Form";
