--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,46 +1,46 @@
 /* Imports */
-@import "base/base";
-@import "base/typography";
-@import "base/variables";
+@import "./base/base";
+@import "./base/typography";
+@import "./base/variables";
 
-@import "features/authentication/LoginForm";
-@import "features/authentication/Signup";
-@import "features/authentication/UpdatePasswordForm";
-@import "features/authentication/UpdateUserDataForm";
-@import "features/bookings/BookingDataBox";
-@import "features/bookings/BookingDetail";
-@import "features/bookings/BookingRow";
-@import "features/bookings/BookingTable";
-@import "features/create-booking/ConfirmBooking";
-@import "features/spaces/SpaceRow";
-@import "features/spaces/SpaceTable";
+@import "./features/authentication/LoginForm";
+@import "./features/authentication/Signup";
+@import "./features/authentication/UpdatePasswordForm";
+@import "./features/authentication/UpdateUserDataForm";
+@import "./features/bookings/BookingDataBox";
+@import "./features/bookings/BookingDetail";
+@import "./features/bookings/BookingRow";
+@import "./features/bookings/BookingTable";
+@import "./features/create-booking/ConfirmBooking";
+@import "./features/spaces/SpaceRow";
+@import "./features/spaces/SpaceTable";
 
-@import "helpers/alignment";
-@import "helpers/margin";
-@import "helpers/row";
-@import "helpers/status";
+@import "./helpers/alignment";
+@import "./helpers/margin";
+@import "./helpers/row";
+@import "./helpers/status";
 
-@import "pages/Login";
-@import "pages/PageNotFound";
+@import "./pages/Login";
+@import "./pages/PageNotFound";
 
-@import "ui/appLayout";
-@import "ui/Button";
-@import "ui/ButtonGroup";
-@import "ui/ButtonText";
-@import "ui/Checkbox";
-@import "ui/Error";
-@import "ui/FileInput";
-@import "ui/Filter";
-@import "ui/Form";
-@import "ui/Input";
-@import "ui/logo";
-@import "ui/MainNav";
-@import "ui/Menus";
-@import "ui/Pagination";
-@import "ui/ProfilePopup";
-@import "ui/Select";
-@import "ui/Spinner";
-@import "ui/Table";
-@import "ui/TableOperations";
-@import "ui/Tag";
-@import "ui/Textarea";
+@import "./ui/appLayout";
+@import "./ui/Button";
+@import "./ui/ButtonGroup";
+@import "./ui/ButtonText";
+@import "./ui/Checkbox";
+@import "./ui/Error";
+@import "./ui/FileInput";
+@import "./ui/Filter";
+@import "./ui/Form";
+@import "./ui/Input";
+@import "./ui/logo";
+@import "./ui/MainNav";
+@import "./ui/Menus";
+@import "./ui/Pagination";
+@import "./ui/ProfilePopup";
+@import "./ui/Select";
+@import "./ui/Spinner";
+@import "./ui/Table";
+@import "./ui/TableOperations";
+@import "./ui/Tag";
+@import "./ui/Textarea";
