--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,46 +1,46 @@
 /* Imports */
-@import "./base/base";
-@import "./base/typography";
-@import "./base/variables";
+@import "./base/_base";
+@import "./base/_typography";
+@import "./base/_variables";
 
-@import "./features/authentication/LoginForm";
-@import "./features/authentication/Signup";
-@import "./features/authentication/UpdatePasswordForm";
-@import "./features/authentication/UpdateUserDataForm";
-@import "./features/bookings/BookingDataBox";
-@import "./features/bookings/BookingDetail";
-@import "./features/bookings/BookingRow";
-@import "./features/bookings/BookingTable";
-@import "./features/create-booking/ConfirmBooking";
-@import "./features/spaces/SpaceRow";
-@import "./features/spaces/SpaceTable";
+@import "./features/authentication/_LoginForm";
+@import "./features/authentication/_Signup";
+@import "./features/authentication/_UpdatePasswordForm";
+@import "./features/authentication/_UpdateUserDataForm";
+@import "./features/bookings/_BookingDataBox";
+@import "./features/bookings/_BookingDetail";
+@import "./features/bookings/_BookingRow";
+@import "./features/bookings/_BookingTable";
+@import "./features/create-booking/_ConfirmBooking";
+@import "./features/spaces/_SpaceRow";
+@import "./features/spaces/_SpaceTable";
 
-@import "./helpers/alignment";
-@import "./helpers/margin";
-@import "./helpers/row";
-@import "./helpers/status";
+@import "./helpers/_alignment";
+@import "./helpers/_margin";
+@import "./helpers/_row";
+@import "./helpers/_status";
 
-@import "./pages/Login";
-@import "./pages/PageNotFound";
+@import "./pages/_Login";
+@import "./pages/_PageNotFound";
 
-@import "./ui/appLayout";
-@import "./ui/Button";
-@import "./ui/ButtonGroup";
-@import "./ui/ButtonText";
-@import "./ui/Checkbox";
-@import "./ui/Error";
-@import "./ui/FileInput";
-@import "./ui/Filter";
-@import "./ui/Form";
-@import "./ui/Input";
-@import "./ui/logo";
-@import "./ui/MainNav";
-@import "./ui/Menus";
-@import "./ui/Pagination";
-@import "./ui/ProfilePopup";
-@import "./ui/Select";
-@import "./ui/Spinner";
-@import "./ui/Table";
-@import "./ui/TableOperations";
-@import "./ui/Tag";
-@import "./ui/Textarea";
+@import "./ui/_AppLayout";
+@import "./ui/_Button";
+@import "./ui/_ButtonGroup";
+@import "./ui/_ButtonText";
+@import "./ui/_Checkbox";
+@import "./ui/_Error";
+@import "./ui/_FileInput";
+@import "./ui/_Filter";
+@import "./ui/_Form";
+@import "./ui/_Input";
+@import "./ui/_logo";
+@import "./ui/_MainNav";
+@import "./ui/_Menus";
+@import "./ui/_Pagination";
+@import "./ui/_ProfilePopup";
+@import "./ui/_Select";
+@import "./ui/_Spinner";
+@import "./ui/_Table";
+@import "./ui/_TableOperations";
+@import "./ui/_Tag";
+@import "./ui/_Textarea";
