--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,8 +20,8 @@
 @import "helpers/row";
 @import "helpers/status";
 
-@import "pages/Login";
-@import "pages/PageNotFound";
+@import "pages/login";
+@import "pages/pageNotFound";
 
 @import "ui/AppLayout";
 @import "ui/Button";
