--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,7 +33,7 @@
 @import "ui/Filter";
 @import "ui/Form";
 @import "ui/Input";
-@import "ui/Logo";
+@import "ui/logo";
 @import "ui/MainNav";
 @import "ui/Menus";
 @import "ui/Pagination";
